# Mine-Mods-Versions-With-Interface

./: .gitignore  CMakeLists.txt  README.md  README_RU.md
resources/: MinecraftVersionsInterface.qrc
src/: MinecraftVersionsInterface.cpp  MinecraftVersionsInterface.hpp  MinecraftVersionsInterface.ui  Names.hpp  PathMeneger.hpp  ProgrammPathMeneger.hpp  main.cpp
